# py-cpp-ffi-demo

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
include/: python_helper.h  util.h
src/: extension.cpp  main.cpp  main_call_py.cpp  test_cpp_extension.py  util.cpp  util.py
test/: test_call_py.h  test_util.h
