[build-system]
requires = ["scikit-build-core", "pybind11", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[project]
name = "py-cpp-ffi"
version = "0.1.0"
description = "A demo repository for Python-C++ interoperability using pybind11 and scikit-build."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[tool.scikit-build]
# build-dir = "build"
cmake.args = ["-DBUILD_EXTENSION=ON"]


[[tool.scikit-build.generate]]
path = "py_cpp_ffi/__init__.py"
template = '''
from ._core import *

__version__ = "${version}"
'''
